For 1.16:
	- added nodes to the "topNodes" field - some warnings were printed for correct
	  scenegraphs pertaining to what nodes were allowed as root nodes.

	- reworked texture coordinates for Extrusion and ElevationGrid to handle Multi
	  Texture nodes (MultiTextureTransform, TextureCoordinateGenerator, etc...)

	- New nodes: 
		- TextureCoordinateGenerator node.
		- StaticGroup node.
		- TextureBackground node.
		- LoadSensor node. (has problems with Scripts)

	- EAI work - work on EventInMF* nodes, and on the get* nodes in Browser.java



For 1.15:
	- Fixed dynamic linker bug with OSX 10.4.3

	- removed get3 and get2 method calls, leading to better error messages when
	  unexpected children are found in VRML code.

	- tagged all nodes with a unique type identifier, leading to better error
	  messaging at runtime for code with generated nodes.
	
	- MultiTextureTransform node support.

	- Sphere solid flag now works.

	- "Endian" bug fixed in Binding stack code.

	- collision turned off by default as it affected conformance; some of the
	  Web3D Interchange profile conformance tests assumed that the viewpoint was
	  within a primitive shape.

	- IndexedLineSet, LineSet, and PointSet  nodes up to spec compliance.

	- MultiTexture node support.

	- Ambient intensity light bug fixed.

	- X3D - duplicate DEFs now flagged.

	- parse META, PROFILE, COMPONENT in VRML encoded X3D files.

	- support for building rpms in Makefile.PL.

	- status bar updated to reduce size and increase information.

	- Threading problem in ProdCon fixed - mainly seen in EAI code.
	
	- Added NavigationInfo speed field values to FLY mode rotations and
	  translations.

	- fixed bug in Javascript invocation dealing with multi float
	  (3F, 4F) values. 

For 1.13:
	- Now use freely distributable font files. See the README in the
	  fonts directory.

	- EXTERNPROTOS can now reference PROTOS in the Extern'd file.

	- freewrlSystem now keeps a list of children; on doQuit it attempts