@@ -1,0 +1,13 @@
+/*******************************************************************
+ Copyright (C) 2005, 2006 John Stewart, Ayla Khan, Sarah Dumoulin, CRC Canada.
+ DISTRIBUTED WITH NO WARRANTY, EXPRESS OR IMPLIED.
+ See the GNU Library General Public License (file COPYING in the distribution)
+ for conditions of use and redistribution.
+*********************************************************************/
+
+/*******************************************************************
+
+	X3D Navigation Component
+
+*********************************************************************/
+
